projects page and photo updates

--- a/experiences.html
+++ b/experiences.html
@@ -28,7 +28,7 @@
         </div>  
         <div class="content">
             <div class="margin-zero">                                                                                                                                                                                                                                           
-                <img class="header-photo" src="AboutMeCover.jpg" alt="About Me Cover">
+                <img class="header-photo" src="experiences-cover.jpg" alt="Experiences Cover">
             </div>
             <div>
                 <p class="header-font center margin-thirty">
