--- a/interests.html
+++ b/interests.html
@@ -29,7 +29,7 @@
         </div>  
         <div class="content">
             <div class="margin-zero">                                                                                                                                                                                                                                           
-                <img class="header-photo" src="interests-index.jpg" alt="Interests Cover">
+                <img class="header-photo" src="interests-cover.jpg" alt="Interests Cover">
             </div>
             <div class="interests-blurb">
                 <p class="blurb-font justify"> Without a doubt, I have been passionate about many
