--- a/projects.html
+++ b/projects.html
@@ -61,10 +61,10 @@
                                         </div>
                                         <div class="projects-grid__item projects-grid__item--1 project-photos-grid">
                                             <div class="project-photos-grid__item project-photos-grid__item--1">
-                                                <img src="temp1.jpg" alt="" class="photo-gallery">
+                                                <img src="elevate-exp1.jpg" alt="" class="photo-gallery">
                                             </div>
                                             <div class="project-photos-grid__item project-photos-grid__item--2">
-                                                <img src="temp2.jpg" alt="" class="photo-gallery">
+                                                <img src="elevate-exp2.jpg" alt="" class="photo-gallery">
                                             </div>
                                         </div>
 
@@ -98,7 +98,7 @@
                 </div>
 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="temp2.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="tappycat-cover.png" alt=""
                     onclick="document.getElementById('modal09').style.display='block'">
                     <div id="modal09" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
@@ -117,10 +117,10 @@
                                         </div>
                                         <div class="projects-grid__item projects-grid__item--1 project-photos-grid">
                                             <div class="project-photos-grid__item project-photos-grid__item--1">
-                                                <img src="temp1.jpg" alt="" class="photo-gallery">
+                                                <img src="tappycat-exp1.jpg" alt="" class="photo-gallery">
                                             </div>
                                             <div class="project-photos-grid__item project-photos-grid__item--2">
-                                                <img src="temp2.jpg" alt="" class="photo-gallery">
+                                                <img src="tappycat-exp2.jpg" alt="" class="photo-gallery">
                                             </div>
                                         </div>
 
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 
-                <div>
+                <!-- <div>
                     <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="temp2.jpg" alt=""
                     onclick="document.getElementById('modal08').style.display='block'">
                     <div id="modal08" class="w3-modal">
@@ -169,7 +169,7 @@
                                                 pulse, __, and most notable, music. When plugged in with a phone, the
                                                 arduino takes in certain pitches. With each pitch being related to a
                                                 certain colour, a series of colours will move across the light strip.
-                                                <!-- To switch between each setting, an app was coded. -->
+                                                To switch between each setting, an app was coded. 
                                             </p>
                                         </div>
                                         <div class="projects-grid__item projects-grid__item--1 project-photos-grid">
@@ -205,17 +205,17 @@
                             </div>
                         </div>   
                     </div>
-                </div>
+                </div> -->
 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="temp3.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="wall-e-cover.jpg" alt=""
                     onclick="document.getElementById('modal07').style.display='block'">
                     <div id="modal07" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
                             <div class="w3-container margin-sixty-bottom">
                                 <span onclick="document.getElementById('modal07').style.display='none'" class="w3-button w3-display-topright">&times;</span>
                                 <div class="padding-thirty">
-                                    <p class="projects-header-style center">JWall - E</p>
+                                    <p class="projects-header-style center">Wall - E</p>
                                     <p class="great-vibes-blurb center">a robot of the future</p>
                                     <div class="projects-grid margin-thirty blurb-style">
                                         <div class="projects-grid__item projects-grid__item--2 projects-info-style">
@@ -227,10 +227,10 @@
                                         </div>
                                         <div class="projects-grid__item projects-grid__item--1 project-photos-grid">
                                             <div class="project-photos-grid__item project-photos-grid__item--1">
-                                                <img src="temp1.jpg" alt="" class="photo-gallery">
+                                                <img src="wall-e-exp1.jpg" alt="" class="photo-gallery">
                                             </div>
                                             <div class="project-photos-grid__item project-photos-grid__item--2">
-                                                <img src="temp2.jpg" alt="" class="photo-gallery">
+                                                <img src="wall-e-exp2.jpg" alt="" class="photo-gallery">
                                             </div>
                                         </div>
                                     </div>
@@ -267,7 +267,7 @@
                 </div>
 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="temp3.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="snake-cover.jpg" alt=""
                     onclick="document.getElementById('modal06').style.display='block'">
                     <div id="modal06" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
@@ -279,17 +279,17 @@
                                     <div class="projects-grid margin-thirty blurb-style">
                                         <div class="projects-grid__item projects-grid__item--2 projects-info-style">
                                             <p class="center">Coded the retro arcade game, Snake. Players must control
-                                                the snake using keyboard inputs to guid the snake. The snake must eat
+                                                the snake using keyboard inputs to guide the snake. The snake must eat
                                                 the food found within the confined boundaries without hitting a wall
                                                 or eating itself.
                                             </p>
                                         </div>
                                         <div class="projects-grid__item projects-grid__item--1 project-photos-grid">
                                             <div class="project-photos-grid__item project-photos-grid__item--1">
-                                                <img src="temp1.jpg" alt="" class="photo-gallery">
+                                                <img src="snake-exp1.jpg" alt="" class="photo-gallery">
                                             </div>
                                             <div class="project-photos-grid__item project-photos-grid__item--2">
-                                                <img src="temp2.jpg" alt="" class="photo-gallery">
+                                                <img src="snake-exp2.jpg" alt="" class="photo-gallery">
                                             </div>
                                         </div>
                                     </div>
@@ -528,7 +528,7 @@
                 </div>
                 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="temp1.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="colouringbook-cover.jpg" alt=""
                     onclick="document.getElementById('modal01').style.display='block'">
                     <div id="modal01" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
@@ -545,10 +545,10 @@
                                         </div>
                                         <div class="projects-grid__item projects-grid__item--1 project-photos-grid">
                                             <div class="project-photos-grid__item project-photos-grid__item--1">
-                                                <img src="temp1.jpg" alt="" class="photo-gallery">
+                                                <img src="colouringbook-exp1.jpg" alt="" class="photo-gallery">
                                             </div>
                                             <div class="project-photos-grid__item project-photos-grid__item--2">
-                                                <img src="temp2.jpg" alt="" class="photo-gallery">
+                                                <img src="colouringbook-exp2.jpg" alt="" class="photo-gallery">
                                             </div>
                                         </div>
                                     </div>
