--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
             <div class="flex-container">
 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="elevate-cover.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="elevate-cover.jpg" alt=""
                     onclick="document.getElementById('modal10').style.display='block'">
                     <div id="modal10" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
@@ -98,7 +98,7 @@
                 </div>
 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="tappycat-cover.png" alt=""
+                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="tappycat-cover.png" alt=""
                     onclick="document.getElementById('modal09').style.display='block'">
                     <div id="modal09" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
@@ -208,7 +208,7 @@
                 </div> -->
 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="wall-e-cover.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="wall-e-cover.jpg" alt=""
                     onclick="document.getElementById('modal07').style.display='block'">
                     <div id="modal07" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
@@ -267,7 +267,7 @@
                 </div>
 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="snake-cover.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="snake-cover.jpg" alt=""
                     onclick="document.getElementById('modal06').style.display='block'">
                     <div id="modal06" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
@@ -318,7 +318,7 @@
                 </div>
 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="temp2.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="temp2.jpg" alt=""
                     onclick="document.getElementById('modal05').style.display='block'">
                     <div id="modal05" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
@@ -369,7 +369,7 @@
                 </div>
 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="temp1.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="nicecream-cover.jpg" alt=""
                     onclick="document.getElementById('modal04').style.display='block'">
                     <div id="modal04" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
@@ -388,10 +388,10 @@
                                         </div>
                                         <div class="projects-grid__item projects-grid__item--1 project-photos-grid">
                                             <div class="project-photos-grid__item project-photos-grid__item--1">
-                                                <img src="temp1.jpg" alt="" class="photo-gallery">
+                                                <img src="nicecream-exp1.jpg" alt="" class="photo-gallery">
                                             </div>
                                             <div class="project-photos-grid__item project-photos-grid__item--2">
-                                                <img src="temp2.jpg" alt="" class="photo-gallery">
+                                                <img src="nicecream-exp2.jpg" alt="" class="photo-gallery">
                                             </div>
                                         </div>
                                     </div>
@@ -411,7 +411,7 @@
                                     </div>
                                     <div>
                                         <p class="projects-style">
-                                            press <a href="https://www.catherinejchen.github.io/Nice-Cream" alt="" class="no-decoration"><i>here</i></a>
+                                            press <a href="https://catherinejchen.github.io/Nice-Cream/" alt="" class="no-decoration"><i>here</i></a>
                                         </p>
                                     </div>
                                 </div>
@@ -422,7 +422,7 @@
                 </div>
 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="temp3.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="temp3.jpg" alt=""
                     onclick="document.getElementById('modal03').style.display='block'">
                     <div id="modal03" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
@@ -476,7 +476,7 @@
                 </div>
 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="temp2.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="temp2.jpg" alt=""
                     onclick="document.getElementById('modal02').style.display='block'">
                     <div id="modal02" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
@@ -528,7 +528,7 @@
                 </div>
                 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="colouringbook-cover.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="colouringbook-cover.jpg" alt=""
                     onclick="document.getElementById('modal01').style.display='block'">
                     <div id="modal01" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
