--- a/projects.html
+++ b/projects.html
@@ -73,22 +73,23 @@
                                         <p>
                                             TOOLS
                                             <br>
-                                            <br>- C#
-                                            <br>- Unity
-                                            <br>- Photoshop
+                                            <br>- HTML
+                                            <br>- CSS
+                                            <br>- ActionScript
+                                            <br>- Node.js
+                                            <br>- Express.js
+                                            <br>- RecordRTC
+                                            <br>- Google Cloud API
                                         </p>
                                     </div>
                                     <div class="projects-style margin-thirty">
                                         <p>
-                                            WANT TO PLAY THE GAME?
+                                            WANT TO SEE THE CODE?
                                         </p>
                                     </div>
                                     <div>
                                         <p class="projects-style">
-                                            press <a href="https://play.google.com/store/apps/details?id=com.rats.TappyCat" alt="" class="no-decoration"><i>here</i></a>
-                                            <br>
-                                            <br>
-                                            Note: Graphics were created by Rebecca Zhao
+                                            press <a href="https://https://github.com/catherinejchen/elevate" alt="" class="no-decoration"><i>here</i></a>
                                         </p>
                                     </div>
                                 </div>
@@ -257,7 +258,7 @@
                                     </div>
                                     <div>
                                         <p class="projects-style">
-                                            press <a href="#" alt="" class="no-decoration"><i>here</i></a>
+                                            press <a href="https://github.com/catherinejchen/Wall-E" alt="" class="no-decoration"><i>here</i></a>
                                         </p>
                                     </div>
                                 </div>
@@ -303,12 +304,12 @@
                                     </div>
                                     <div class="projects-style margin-thirty">
                                         <p>
-                                            WANT TO VISIT THE WEBSITE?
+                                            WANT TO SEE THE CODE?
                                         </p>
                                     </div>
                                     <div>
                                         <p class="projects-style">
-                                            press <a href="#" alt="" class="no-decoration"><i>here</i></a>
+                                            press <a href="https://github.com/catherinejchen/Snake-Game" alt="" class="no-decoration"><i>here</i></a>
                                         </p>
                                     </div>
                                 </div>
@@ -318,7 +319,7 @@
                 </div>
 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="temp2.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="CIS12-cover.jpg" alt=""
                     onclick="document.getElementById('modal05').style.display='block'">
                     <div id="modal05" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
@@ -335,10 +336,10 @@
                                         </div>
                                         <div class="projects-grid__item projects-grid__item--1 project-photos-grid">
                                             <div class="project-photos-grid__item project-photos-grid__item--1">
-                                                <img src="temp1.jpg" alt="" class="photo-gallery">
+                                                <img src="CIS12-exp1.jpg" alt="" class="photo-gallery">
                                             </div>
                                             <div class="project-photos-grid__item project-photos-grid__item--2">
-                                                <img src="temp2.jpg" alt="" class="photo-gallery">
+                                                <img src="CIS12-exp2.jpg" alt="" class="photo-gallery">
                                             </div>
                                         </div>
                                     </div>
@@ -422,7 +423,7 @@
                 </div>
 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="temp3.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="DM12-cover.jpg" alt=""
                     onclick="document.getElementById('modal03').style.display='block'">
                     <div id="modal03" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
@@ -441,10 +442,10 @@
                                         </div>
                                         <div class="projects-grid__item projects-grid__item--1 project-photos-grid">
                                             <div class="project-photos-grid__item project-photos-grid__item--1">
-                                                <img src="temp1.jpg" alt="" class="photo-gallery">
+                                                <img src="DM12-exp1.jpg" alt="" class="photo-gallery">
                                             </div>
                                             <div class="project-photos-grid__item project-photos-grid__item--2">
-                                                <img src="temp2.jpg" alt="" class="photo-gallery">
+                                                <img src="DM12-exp2.jpg" alt="" class="photo-gallery">
                                             </div>
                                         </div>
                                     </div>
@@ -476,7 +477,7 @@
                 </div>
 
                 <div>
-                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="temp2.jpg" alt=""
+                    <img class="photo-gallery w3-hover-opacity border" style="cursor: pointer" src="DM11-cover.jpg" alt=""
                     onclick="document.getElementById('modal02').style.display='block'">
                     <div id="modal02" class="w3-modal">
                         <div class="w3-modal-content w3-animate-opacity">
@@ -493,10 +494,10 @@
                                         </div>
                                         <div class="projects-grid__item projects-grid__item--1 project-photos-grid">
                                             <div class="project-photos-grid__item project-photos-grid__item--1">
-                                                <img src="temp1.jpg" alt="" class="photo-gallery">
+                                                <img src="DM11-exp1.jpg" alt="" class="photo-gallery">
                                             </div>
                                             <div class="project-photos-grid__item project-photos-grid__item--2">
-                                                <img src="temp2.jpg" alt="" class="photo-gallery">
+                                                <img src="DM11-exp2.jpg" alt="" class="photo-gallery">
                                             </div>
                                         </div>
                                     </div>
