--- a/experiences.html
+++ b/experiences.html
@@ -29,9 +29,15 @@
             </nav>
         </div>  
         <div class="content">
-            <div class="margin-zero">                                                                                                                                                                                                                                           
+            <div>                                                                                                                                                                                                                                           
                 <img class="header-photo" src="experiences-cover.jpg" alt="Experiences Cover">
             </div>
+            <a href="#index-buttons" class="arrow-container no-decoration">
+                <div class="chevron"></div>
+                <div class="chevron"></div>
+                <div class="chevron"></div>
+                <span class="arrow-text">Scroll down</span>
+            </a>
             <div>
                 <p class="header-font center margin-thirty">
                     ~ coming soon ~
@@ -41,7 +47,7 @@
                 <p>
                     <a href="contact.html" class="fa fa-envelope"></a>
                     <a href="https://www.github.com/catherinejchen" target="_blank" class="fa fa-github"></a>
-                    <a href="https://www.instagram.com/catherinejchen" target="_blank" class="fa fa-instagram"></a>
+                    <!-- <a href="https://www.instagram.com/catherinejchen" target="_blank" class="fa fa-instagram"></a> -->
                     <a href="https://www.linkedin.com/in/catherinejjchen" target="_blank" class="fa fa-linkedin"></a>
                 </p>
             </div>
