--- a/index.html
+++ b/index.html
@@ -27,12 +27,25 @@
                 </div>
                     <a href="#" class="logo">CATHERINE CHEN</a>
             </nav>
-        </div>  
+        </div>
         <div class="content">
-            <div class="margin-zero">                                                                                                                                                                                                                                           
-                <img class="header-photo" src="AboutMeCover.jpg" alt="About Me Cover">
+            <div>
+                <img class="header-photo" src="AboutMeCover-blur.jpg" alt="About Me Cover">
             </div>
-            <div class="photo-grid">
+            <div class="centered">
+                <hr class="main-line">
+                <p class="main-header-font">
+                    HOME
+                </p>
+                <hr class="main-line">
+            </div>
+            <a href="#index-buttons" class="arrow-container no-decoration">
+                <div class="chevron"></div>
+                <div class="chevron"></div>
+                <div class="chevron"></div>
+                <span class="arrow-text">Scroll down</span>
+            </a>
+            <div id="index-buttons" class="photo-grid">
                 <div class="photo-grid__item photo-grid__item--1 container">
                     <a href="projects.html" alt="">
                         <img src="projects-index.jpg" class="photo-gallery photo" alt="">
@@ -124,7 +137,7 @@
                 " " - some senior friendo
                 </p>
             </div>
-            <div class="instagram-background">
+            <!-- <div class="instagram-background">
                 <div>
                     <p class="instagram-header">
                         MY INSTAGRAM
@@ -180,12 +193,12 @@
                 <div class="instagram-ad">
                     <a href="http://www.instagram.com/catherinejchen" target="_blank">follow me</a>
                 </div>
-            </div>
+            </div> -->
             <div class="socials-style">
                 <p>
                     <a href="contact.html" class="fa fa-envelope"></a>
                     <a href="https://www.github.com/catherinejchen" target="_blank" class="fa fa-github"></a>
-                    <a href="https://www.instagram.com/catherinejchen" target="_blank" class="fa fa-instagram"></a>
+                    <!-- <a href="https://www.instagram.com/catherinejchen" target="_blank" class="fa fa-instagram"></a> -->
                     <a href="https://www.linkedin.com/in/catherinejjchen" target="_blank" class="fa fa-linkedin"></a>
                 </p>
             </div>
@@ -193,6 +206,7 @@
                 <p class="text-font center">designed and created by catherine chen</p>
             </div>
         </div>
+    </div>>
         <script src="Script.js"></script>
     </body>
 </html>
