--- a/interests.html
+++ b/interests.html
@@ -30,9 +30,15 @@
             </nav>
         </div>  
         <div class="content">
-            <div class="margin-zero">                                                                                                                                                                                                                                           
+            <div>                                                                                                                                                                                                                                           
                 <img class="header-photo" src="interests-cover.jpg" alt="Interests Cover">
             </div>
+            <a href="#index-buttons" class="arrow-container no-decoration">
+                <div class="chevron"></div>
+                <div class="chevron"></div>
+                <div class="chevron"></div>
+                <span class="arrow-text">Scroll down</span>
+            </a>
             <div class="interests-blurb">
                 <p class="blurb-font justify"> Without a doubt, I have been passionate about many
                     things within my lifetime. As expected, some of these passions were
@@ -302,7 +308,7 @@
                 <p>
                     <a href="contact.html" class="fa fa-envelope"></a>
                     <a href="https://www.github.com/catherinejchen" target="_blank" class="fa fa-github"></a>
-                    <a href="https://www.instagram.com/catherinejchen" target="_blank" class="fa fa-instagram"></a>
+                    <!-- <a href="https://www.instagram.com/catherinejchen" target="_blank" class="fa fa-instagram"></a> -->
                     <a href="https://www.linkedin.com/in/catherinejjchen" target="_blank" class="fa fa-linkedin"></a>
                 </p>
             </div>
