--- a/projects.html
+++ b/projects.html
@@ -33,9 +33,15 @@
             </nav>
         </div>   
         <div class="content">
-            <div class="margin-zero">                                                                                                                                                                                                                                           
+            <div>                                                                                                                                                                                                                                           
                 <img class="header-photo" src="projects-cover.jpg" alt="Projects Cover">
             </div>
+            <a href="#index-buttons" class="arrow-container no-decoration">
+                <div class="chevron"></div>
+                <div class="chevron"></div>
+                <div class="chevron"></div>
+                <span class="arrow-text">Scroll down</span>
+            </a>
             <div class="margin-thirty">
                 <p class="header-font center">
                     coding - related projects
@@ -581,7 +587,7 @@
                 <p>
                     <a href="contact.html" class="fa fa-envelope"></a>
                     <a href="https://www.github.com/catherinejchen" target="_blank" class="fa fa-github"></a>
-                    <a href="https://www.instagram.com/catherinejchen" target="_blank" class="fa fa-instagram"></a>
+                    <!-- <a href="https://www.instagram.com/catherinejchen" target="_blank" class="fa fa-instagram"></a> -->
                     <a href="https://www.linkedin.com/in/catherinejjchen" target="_blank" class="fa fa-linkedin"></a>
                 </p>
             </div>
