--- a/resume.html
+++ b/resume.html
@@ -29,9 +29,15 @@
             </nav>
         </div>  
         <div class="content">
-            <div class="margin-zero">                                                                                                                                                                                                                                           
+            <div>                                                                                                                                                                                                                                           
                 <img class="header-photo" src="resume-cover.jpg" alt="Resume Cover">
             </div>
+            <a href="#index-buttons" class="arrow-container no-decoration">
+                <div class="chevron"></div>
+                <div class="chevron"></div>
+                <div class="chevron"></div>
+                <span class="arrow-text">Scroll down</span>
+            </a>
             <div class="margin-thirty center">
                 <a href="CatherineChen_Resume.pdf" target="_blank" class="header-font no-decoration">view my resume</a>
                 <p class="blurb-font">Want to hire me? Get in contact with me <a href="contact.html" class="no-decoration"><u>here</u>.</a></p>
@@ -43,7 +49,7 @@
                 <p>
                     <a href="contact.html" class="fa fa-envelope"></a>
                     <a href="https://www.github.com/catherinejchen" target="_blank" class="fa fa-github"></a>
-                    <a href="https://www.instagram.com/catherinejchen" target="_blank" class="fa fa-instagram"></a>
+                    <!-- <a href="https://www.instagram.com/catherinejchen" target="_blank" class="fa fa-instagram"></a> -->
                     <a href="https://www.linkedin.com/in/catherinejjchen" target="_blank" class="fa fa-linkedin"></a>
                 </p>
             </div>
